--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,7 @@ matplotlib==3.8.1
 networkx==3.1
 numpy
 onnx==1.15.0
-onnxruntime
+onnxruntime-gpu
 openapi-codec==1.3.2
 opencv-contrib-python-headless==4.8.1.78
 opencv-python==4.8.1.78
