Docker-compose updated

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,5 +1,6 @@
 upstream loadbalancer {
-    server 95.31.6.30:8000 weight=5;
+    #server 95.31.6.30:8000 weight=5;
+    server microservice:8000 weight=5;
 }
 
 server {
