--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,19 @@ version: '3.8'
 
 services:
 
-
+    microservice:
+        build:
+            context: .
+        restart: always
 
     nginx-balancer:
         build: ./nginx
         image: nginx
         container_name: nginx-balancer
         restart: always
+
+        depends_on:
+            - microservice
         ports:
             - "8000:8000"
 
