--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,6 +1,8 @@
 upstream loadbalancer {
     #server 95.31.6.30:8000 weight=5;
     server microservice:8000 weight=5;
+    server 95.165.92.180:8000 weight=5;
+    server 95.165.92.184:8000 weight=5;
 }
 
 server {
